Styles added to prevent auto form zoom on mobile. Usernames and Names made friendlier and less strict for User.

--- a/src/client/sass/screen.scss
+++ b/src/client/sass/screen.scss
@@ -214,6 +214,7 @@ body {
         border-radius: 1.5rem;
         text-align: center;
         border: 2px solid #ccc;
+        font-size: 1rem !important;
     }
     .form-input:focus {
         border: 2px solid #ccc;
@@ -227,6 +228,7 @@ body {
         background-color: #09c091;
         border: 2px solid #09c091;
         transition: transform 0.2s;
+        font-size: 1rem;
     }
     .form-submit:disabled {
         background-color: #9fe2bf;
